--- a/overlay/CupidSystemUIOverlay/res/values/config.xml
+++ b/overlay/CupidSystemUIOverlay/res/values/config.xml
@@ -30,4 +30,7 @@
     <!-- Location on the screen of the center of the fingerprint sensor. -->
     <dimen name="physical_fingerprint_sensor_center_screen_location_y">2163px</dimen>
 
+    <!-- The width/height of the unlock icon view on keyguard. -->
+    <dimen name="keyguard_indication_margin_bottom">4dp</dimen>
+
 </resources>
