--- a/overlay/CupidFrameworksOverlay/res/values/config.xml
+++ b/overlay/CupidFrameworksOverlay/res/values/config.xml
@@ -365,6 +365,6 @@
      <integer name="config_udfps_illumination_transition_ms">0</integer>
 
      <!-- Type of the udfps long press sensor. Empty if long press is not supported. -->
-     <string name="config_dozeUdfpsLongPressSensorType" translatable="false">co.aospa.sensor.udfps</string>
+     <string name="config_dozeUdfpsLongPressSensorType" translatable="false">org.lineageos.sensor.udfps</string>
 
 </resources>
